--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -35,7 +35,7 @@
     "otherModules": [],
     "enableTranslation": true,
     "nativeLanguage": "en",
-    "languages": ["en"],
+    "languages": ["en", "ar-ly", "zh-cn", "nl"],
     "blueprints": []
   }
 }
