--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.7",
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "8.0.0",
@@ -26,6 +27,7 @@
     "core-js": "3.1.3",
     "moment": "2.24.0",
     "ng-jhipster": "0.10.1",
+    "ngmap": "^1.18.5",
     "ngx-cookie": "4.0.2",
     "ngx-infinite-scroll": "7.2.0",
     "ngx-webstorage": "4.0.1",
