--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "rxjs": "6.5.2",
     "swagger-ui": "^2.2.10",
     "tslib": "1.10.0",
-    "zone.js": "0.9.1"
+    "zone.js": "0.9.1",
+    "@angular/animations": "8.0.0",
+    "chart.js": "2.7.2",
+    "primeng": "6.1.4"
   },
   "devDependencies": {
     "@angular/cli": "8.0.2",
