--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -10,7 +10,7 @@
     "packageName": "org.appautomation",
     "packageFolder": "org/appautomation",
     "serverPort": "8080",
-    "authenticationType": "jwt",
+    "authenticationType": "oauth2",
     "cacheProvider": "ehcache",
     "enableHibernateCache": true,
     "websocket": false,
