--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "node_modules"
   ],
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.7",
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "8.0.0",
@@ -27,17 +26,13 @@
     "core-js": "3.1.3",
     "moment": "2.24.0",
     "ng-jhipster": "0.10.1",
-    "ngmap": "^1.18.5",
     "ngx-cookie": "4.0.2",
     "ngx-infinite-scroll": "7.2.0",
     "ngx-webstorage": "4.0.1",
     "rxjs": "6.5.2",
-    "swagger-ui": "^2.2.10",
+    "swagger-ui": "2.2.10",
     "tslib": "1.10.0",
-    "zone.js": "0.9.1",
-    "@angular/animations": "8.0.0",
-    "chart.js": "2.7.2",
-    "primeng": "6.1.4"
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
     "@angular/cli": "8.0.2",
